--- a/theme/sections/instagram-scrollbar.liquid
+++ b/theme/sections/instagram-scrollbar.liquid
@@ -1,9 +1,16 @@
-<rv-instagram-scrollbar instagram-id="{{section.settings.instagram_id}}" open-links="{{section.settings.open-links}}" limit="{{section.settings.limit}}" open-url="{{section.settings.open-url}}" class="d-block container-fluid">
+<rv-instagram-scrollbar
+  instagram-id="{{section.settings.instagram_id}}"
+  open-links="{{section.settings.open-links}}"
+  limit="{{section.settings.limit}}"
+  open-url="{{section.settings.open-url}}"
+  class="d-block container-fluid"
+  style="background-color: #4D3A40;"
+  >
   <div class="row title-row scrollbar-invisible scrollbar-x-hidden scrollbar-y-hidden">
     <div
       class="col-auto title-col text-nowrap"
       rv-show="media.data | size | gt 0"
-      style="padding-right: 16%; padding-left: 16%; background-color: #4D3A40; color: #D9998F;"
+      style="padding-right: 16%; padding-left: 16%; color: #D9998F;"
       rv-i18n-text="'sections.instagram-scrollbar.title'"
     >
       {{'title'|t}}
@@ -13,10 +20,10 @@
     <div class="col-7 col-md-5 px-0 content-box ratio-1-1 cursor-pointer" rv-each-image="media.data" rv-class="image.media_type" rv-data-url="image.permalink" rv-on-tap="onTap">
       
       {% comment %} IMAGE {% endcomment %}
-      <img lazyload="on" class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
+      <img lazyload="auto" class="content" rv-if="image.media_type | eq 'IMAGE'" rv-src="image.media_url" rv-alt="image.caption">
 
       {% comment %} CAROUSEL_ALBUM {% endcomment %}
-      <img lazyload="on" class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
+      <img lazyload="auto" class="content" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
       <video class="content" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
