--- a/theme/snippets/jumplink-login.liquid
+++ b/theme/snippets/jumplink-login.liquid
@@ -89,7 +89,7 @@
           </div>
 
           {% comment %} create_customer {% endcomment %}
-          <div class="col-6 order-3">
+          <div class="col-12 col-sm-6 order-3 pb-5">
             {% form 'create_customer' %}
 
               {% comment %} Error and Successfull messages {% endcomment %}
