--- a/theme/templates/page.returns.liquid
+++ b/theme/templates/page.returns.liquid
@@ -1,10 +1,10 @@
 <div class="container-fluid pt-5" id="page-{{ page.handle }}">
   <div class="row pt-md-5 scrollbar-x-auto">
-    {% unless page.content == blank %}
-        <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte">
-          {{ page.content }}
-        </div>
-    {% endunless %}
+    <div class="col-12 col-md-8 offset-md-2 col-lg-6 rte" rv-i18n-html="">
+      {{page.content}}
+      <template lang="default">{{page.content}}</template>
+      <template lang="de">{{page.metafields["global"]["de-content"]}}</template>
+    </div>
     <div class="col-12 col-md-8 offset-md-2 col-lg-6">
       <p rv-i18n-html="'return.shipping_note'">{{'return.shipping_note'|t}}</p>
     </div>
