[Product] Show Choose size label instead of add to card if no size was choosed

--- a/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
@@ -80,7 +80,7 @@
       </div>
       <div class="col text-right text-truncate d-flex align-items-end justify-content-end mb-2">
         <button rv-hide="showDetailMenu" class="btn btn-animated-underline-dark" rv-on-click="toggleDetailMenu">
-          <span rv-i18n-text="'products.add'">{{'products.add'|t}}</span>
+          <span rv-i18n-text="'products.choose'">{{'products.choose'|t}}</span>
         </button>
         <button rv-show="showDetailMenu" rv-enabled="available" class="btn btn-animated-underline-dark" rv-on-click="addToCart">
           <span rv-show="variant.available" rv-i18n-text="'products.add'">{{'products.add'|t}}</span>
