--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -121,9 +121,9 @@
           <div class="col-12 d-flex justify-content-end align-self-end mb-3" rv-hide="showDetailMenu">
             <div class="btn-wrapper">
               <button class="btn btn-animated-underline-dark" rv-on-click="toggleDetailMenu"
-                rv-i18n-text="'products.add'"
+                rv-i18n-text="'products.choose'"
               >
-                {{'products.add'|t}}
+                {{'products.choose'|t}}
               </button>
             </div>
           </div>
