--- a/src/scss/templates/index.scss
+++ b/src/scss/templates/index.scss
@@ -1,7 +1,13 @@
 @import 'blog';
+@import 'cart';
+@import 'collection';
 @import 'comments';
-@import 'navigation';
+@import 'customers';
+@import 'filter';
 @import 'footer';
-@import 'legals';
-@import 'shopify';
 @import 'instagram';
+@import 'legals';
+@import 'list-collections';
+@import 'navigation';
+@import 'product';
+@import 'shopify';
