--- a/src/ts/components/shopify-product/shopify-product.component.scss
+++ b/src/ts/components/shopify-product/shopify-product.component.scss
@@ -1,3 +1,13 @@
 rv-shopify-product {
   display: block;
+
+  .btn-quantity {
+    cursor: pointer;
+    user-select: none;
+    font-size: 1.1rem;
+  }
+
+  .input-quantity {
+    width: 28px !important;
+  }
 }
