--- a/theme/snippets/jumplink-article-comments-list.liquid
+++ b/theme/snippets/jumplink-article-comments-list.liquid
@@ -2,7 +2,7 @@
   {% if number_of_comments > 0 %}
     <div class="lead">
       <h3
-        class="h1 text-serif font-weight-normal"
+        class="h1 font-weight-normal"
         rv-i18n-text="'blogs.comments.title'"
         >
         {{'blogs.comments.title'|t: title: article.title}}
