--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -3,7 +3,7 @@
   {% comment %}
     SUBBAR
   {% endcomment %}
-  <div class="row subbar pt-2 font-weight-bold text-serif d-none d-lg-flex">
+  <div class="row subbar pt-2  d-none d-lg-flex">
     <div class="col d-flex">
       <div class="ml-auto">
          
