[Products] Show more products in row in collections

--- a/src/ts/components/shopify-product-item/shopify-product-item.component.scss
+++ b/src/ts/components/shopify-product-item/shopify-product-item.component.scss
@@ -13,4 +13,14 @@ rv-shopify-product-item {
       pointer-events: all;
     }
   }
+
+  .btn-quantity {
+    cursor: pointer;
+    user-select: none;
+    font-size: 1.1rem;
+  }
+
+  .input-quantity {
+    width: 28px !important;
+  }
 }
