--- a/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-collection-grid-item-col-ratio-3-4.liquid
@@ -26,10 +26,12 @@
       <div class="col-12 px-0 detailMenu" rv-class-show="showDetailMenu">
         
         <div class="row">
-          <div class="col-7 offset-3 d-flex justify-content-center text-center">
+          <div class="col-8 offset-2 d-flex justify-content-center text-center">
             <div class="form-inline">
               <label class="m-0" for="quanity" rv-i18n-text="'products.quantity'">{{'products.quantity'|t}}</label>
-              <input type="number" min="0" step="1" class="form-control bg-transparent border-0" id="quanity" rv-value="quantity | strip_html | number 1" style="width: 70px; font-weight: bold;">
+              <span class="px-3 btn-quantity" rv-on-click="decrease">-</span>
+              <input type="number" min="0" step="1" class="form-control input-quantity bg-transparent border-0 px-0 text-center" id="quanity" rv-value="quantity | strip_html | number 1">
+              <span class="px-3 btn-quantity" rv-on-click="increase">+</span>
             </div>
           </div>
           <div class="col-2 d-flex justify-content-end mb-3">
@@ -74,11 +76,11 @@
     </div>
     <div class="row m-0 pointer-events-all">
 
-      <div class="col text-left text-truncate">
+      <div class="cpl-12 col-md text-left text-truncate">
         <strong rv-route="'{{ product.url | within: collection }}'">{{ product.title }}</strong><br />
         <div rv-text="variant.price | money '{{ shop.money_format }}'">{{ product.price | money }}</div>
       </div>
-      <div class="col text-right text-truncate d-flex align-items-end justify-content-end mb-2">
+      <div class="col-md text-right d-none d-md-flex align-items-end justify-content-end mb-2 text-truncate">
         <button rv-hide="showDetailMenu" class="btn btn-animated-underline-dark" rv-on-click="toggleDetailMenu">
           <span rv-i18n-text="'products.choose'">{{'products.choose'|t}}</span>
         </button>
