--- a/theme/templates/collection.liquid
+++ b/theme/templates/collection.liquid
@@ -2,7 +2,7 @@
   {% paginate collection.products by 40 %}
     <div class="row">
       {% for product in collection.products %}
-        {% include 'jumplink-product-collection-grid-item-col-ratio-3-4' with product, collection, colClass: 'col-12 col-md-6' %}
+        {% include 'jumplink-product-collection-grid-item-col-ratio-3-4' with product, collection, colClass: 'col-6 col-lg-4 col-xl-3' %}
       {% endfor %}
       <div class="col-12">
         {% include 'jumplink-pagination' with viewId: 'products-pagination' %}
