--- a/theme/sections/cookie-banner.liquid
+++ b/theme/sections/cookie-banner.liquid
@@ -59,13 +59,13 @@
         "content_html": "Hey there, we use <a rv-route=\"'{{ link1 }}'\" href=\"{{ link1 }}\">cookies</a> to improve our experience with our site.",
         "okay": "Okay",
         "close": "Close",
-        "link-label": "Change privacy settings"
+        "link-label": "Change"
       },
       "de": {
         "content_html": "Hey, wir verwenden <a rv-route=\"'{{ link1 }}'\" href=\"{{ link1 }}\">Cookies</a> um deine Benutzererfahrung mit unserer Website zu verbessern.",
         "okay": "Okay",
         "close": "Schließen",
-        "link-label": "Datenschutzeinstellungen ändern"
+        "link-label": "Anpassen"
       }
     }
   }
